# openOwl

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  gh_comments_data_wrangling.py  gh_llm.py  ghapi_data_wrangling.py  pyproject.toml  work-in-progress-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/ISSUE_TEMPLATES/: feature_idea.yml
data/: db_dependencies.json  db_dependencies_old.json  ghapi-response-example.json  ghapi_get_issue_details_requests.json  ghapi_get_issue_details_requests_5536.json  ghapi_get_issue_details_requests_5536_filtered.json  ghapi_get_issue_details_requests_6711.json  ghapi_get_issue_details_requests_6711_filtered.json  ghapi_get_issues_added_details.json  ghapi_get_issues_requests.json  ghapi_get_issues_requests_shortened.json  ghapi_get_pulls_requests.json  ghapi_get_pulls_requests_shortened.json  ghapi_get_pulls_requests_sum.json
notebooks/: gh_comments_sentiment_analysis.ipynb
openowl/: .env.example  api.py  app.py  clients.py  db_utils.py  deps_local.py  depsdev_client.py  depsdev_utils.py  gh_api.py  gh_llm.py  gh_sentiment_analysis.py  gh_sentiment_llm_guard.py  ghapi.py  graphs.py  llm_knowledge_security.py  logger_config.py  prompt_templates.py  utils.py  utils_tinydb.py
