[tool.poetry]
name = "openowl"
version = "0.1.0"
description = "OSS monitoring and security"
authors = ["defjm <git.mojan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
fastapi = "^0.112.2"
pydantic = "^2.8.2"
uvicorn = "^0.30.6"
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
